overlays/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-metalbear-dev-ingress
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: ip-visit-frontend
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /count
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: ip-visit-counter
            port:
              number: 80
